=======
CHANGES
=======

1.9.3 (unreleased)
------------------

- server error when opening demographic container (https://launchpad.net/bugs/887662)
- Import of Contact Relationships fails with DuplicateRelationship error
  (https://launchpad.net/bugs/882482)


1.9.2 (2011-11-04)
------------------

- Make sandbox with virtualenv. Fixes bootstrap with Python 2.7.
- Group sections by term in calendar (https://launchpad.net/bugs/872289)
- Terms are listed upside down (https://launchpad.net/bugs/872240)
- Moved Demographics into General Information accordion
- Added two "Other" contact fields (https://launchpad.net/bugs/874568)
- User information doesn't show username (https://launchpad.net/bugs/545767)
- Username in login bar should go to user home (https://launchpad.net/bugs/868394)
- No language selector in flourish (https://launchpad.net/bugs/868397)
- Many calendaring fixes
- Updated translations.

Export
++++++

- XLS import of boolean or required demo fields (https://launchpad.net/bugs/859424)


1.9.1 (2011-10-07)
------------------

- Fully translatable.
- Experimental implementation of Selenium testing API.
- Fixed or disabled some tests.
- Page title.
- Updated translations.

Export
++++++

- Added small sample data xls.
- Added boolean and date demo field support to xls import.
- Fixed export of booleans bug (https://launchpad.net/bugs/796791)


1.9.0 (2011-09-21)
------------------

This is a first release from "flourish" branch that was being worked on
tirelessly since June. 

It features a new, much improved look and navigation, a total redesign.

There are too many changes to list.

Export
++++++

- XLS import/export of contacts (https://launchpad.net/bugs/608873)

API changes
+++++++++++

- Timetables rewrite
- Pluggable traverser refactoring, traversers lost redundant request parameter
- New `flourish` content, viewlet, page, breadcrumbs, resourceLibrary and
  ZCML directives for them.


1.7.0 (2011-09-15)
------------------

New features